compile notes