@@ -1,2 +1,6 @@
 # BoardBuddy
 A app for sorting and interacting with your favorite board games.
+
+
+
+/usr/bin/env /usr/lib/jvm/java-26-openjdk/bin/java --enable-preview -XX:+ShowCodeDetailsInExceptionMessages -cp /home/mwn319/.config/Code/User/workspaceStorage/c0db5e7d81c93afc9c8172b0390a5df5/redhat.java/jdt_ws/BoardBuddy_7ae264e1/bin com.boardbuddy.Main 
